# rcam

./: .gitignore  Cargo.toml  README.md  bench.py  bench_apriltag.py  bench_rapidtag.py  main.py  pyproject.toml
docs/: OV9281-160 Camera - Waveshare Wiki.html
ov9281/: README.md
ov9281/module/: Makefile
ov9281/overlay/: qcs6490-radxa-dragon-q6a-cam1-ov9281.dtso  qcs6490-radxa-dragon-q6a-cam2-ov9281.dtso  qcs6490-radxa-dragon-q6a-cam3-ov9281.dtso  qcs6490-radxa-dragon-q6a-dual-ov9281.dtso  qcs6490-radxa-dragon-q6a-ov9281-active.dtso
ov9281/scripts/: bringup.sh  capture.sh  capture_dual.sh  deploy_efi_dtb.sh  deploy_merged_dtb.sh  install.sh  revert_efi_dtb.sh  revert_merged_dtb.sh  uninstall.sh  y10p_to_pgm.py
rust/: lib.rs
src/rcam/: __init__.py  camera.py  topology.py
